<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KontakDetail"
    android:layout_margin="16dp">

    <EditText
        android:hint="@string/nama"
        android:textColor="@color/item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        app:layout_constraintBottom_toBottomOf="@id/nomorawal"
        android:id="@+id/namaawal" />

    <EditText
        android:hint="@string/nomor_hp"
        android:textColor="@color/item"
        app:layout_constraintTop_toBottomOf="@+id/namaawal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/edit"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:id="@+id/nomorawal"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/edit"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/nomorawal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimare" />

    <ImageButton
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:background="@drawable/ic_delete_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/hapus"
        android:contentDescription="@string/todo" />

    <ProgressBar
        android:id="@+id/probar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>