<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idKontak"
                android:textStyle="italic"
                android:textSize="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_kontak" />

            <TextView
                android:id="@+id/namaKontak"
                android:textColor="@color/item"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_kontak" />

            <TextView
                android:id="@+id/noKontak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_kontak" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/deletbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_delete_black_24dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="14dp"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>